fixed some translations and added the links to the project covers

--- a/assets/css/basics/basics.sass
+++ b/assets/css/basics/basics.sass
@@ -3,6 +3,7 @@
   color: white
   background: black
   color: #9C27B0
+  transition: all 0.3s ease-in-out
 
 .content
   position: relative
@@ -12,10 +13,11 @@
     font-size: 33px
 
 button
-  padding: 10px
-  margin: 10px
+  padding: 10px 
+  margin: 10px 0
   margin-left: 0
   cursor: pointer
+  background: rgba(0, 0, 0, 0)
 
   &:hover
     +hoverButton
@@ -28,4 +30,4 @@ button
   .is-active
 
 .footer
-  overflow: hidden
+  overflow: hidden !important
