--- a/assets/css/components/header.sass
+++ b/assets/css/components/header.sass
@@ -26,7 +26,7 @@ header
         display: inline-block
         border: solid 3px black
         padding: 0
-        margin: 0
+        margin: 4px
         box-shadow: 0px 2px 4px black
 
         button
