--- a/assets/css/sections/section-projects.sass
+++ b/assets/css/sections/section-projects.sass
@@ -54,7 +54,7 @@
         top: 0
         z-index: 2
         padding: 20px 10px
-        background-color: rgba(35, 35, 35, 0.81)
+        background-color: rgba(23, 20, 20, 0.89)
         color: white
         visibility: hidden
         height: 100%
